v0.4.0 -added header links (WIP) -Alignment issues yet to be fixed

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Empowerment Technologies Project
 Started Tues Sep 18 12:33PST
-Version 0.0.3
+Version 0.4.0
 Created by Olympus
 */
 
@@ -44,6 +44,32 @@ body {
   background: #011A2F;
   width: auto;
   height: 50px;
+}
+
+
+ul.headinglinks {
+  text-align: center;
+  list-style-type: none;
+  height: inherit;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li.headers {
+  text-align: center;
+  float: left;
+  background-color: gray; /* for demosntration only, must remove */
+}
+
+li a.headlink {
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  font-family: ProductSans;
+  font-size: 24px;
+  color: white;
+  padding: 14px 14px;
 }
 
 #header1 {
